<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/change_predictor"
        android:orderInCategory="100"
        android:title="Change Predictor"
        app:showAsAction="always" />

    <item
        android:id="@+id/save_csv"
        android:orderInCategory="100"
        android:title="@string/save_csv"
        app:showAsAction="never" />

    <item
        android:id="@+id/load_csv"
        android:orderInCategory="100"
        android:title="Load CSV"
        app:showAsAction="never" />

    <item
        android:id="@+id/send_csv"
        android:orderInCategory="100"
        android:title="@string/send_csv"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_csv"
        android:orderInCategory="100"
        android:title="@string/delete_csv"
        app:showAsAction="never" />
    <item
        android:id="@+id/clear_db"
        android:orderInCategory="100"
        android:title="@string/clear_db"
        app:showAsAction="never" />
    <item
        android:id="@+id/send_params"
        android:orderInCategory="100"
        android:title="Send Params"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete_params"
        android:orderInCategory="100"
        android:title="Delete Params"
        app:showAsAction="never" />


</menu>
