<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/custom_background"
    android:gravity="left"
    android:orientation="horizontal"
    android:weightSum="1.0">



    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_weight=".65"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/title_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/regular_text"
            android:text="Name"
            android:layout_marginBottom="5dp"/>

        <LinearLayout style="@style/readout_cell"
            android:layout_weight=".25">

            <TextView
                style="@style/panel_main_label"

                android:text="Accelerometer" />

            <LinearLayout style="@style/panel_values_area">

                <LinearLayout style="@style/prompt_row">

                    <TextView
                        android:id="@+id/accelXPrompt"
                        style="@style/panel_textlabel"
                        android:text="AccelX" />

                    <TextView
                        android:id="@+id/accelYPrompt"
                        style="@style/panel_textlabel"
                        android:text="AccelY" />

                    <TextView
                        android:id="@+id/accelZPrompt"
                        style="@style/panel_textlabel"
                        android:text="AccelZ" />

                </LinearLayout>

                <LinearLayout style="@style/readout_row">

                    <TextView
                        android:id="@+id/accelX"
                        style="@style/panel_textview"
                        android:text="0.0" />

                    <TextView
                        android:id="@+id/accelY"
                        style="@style/panel_textview"
                        android:text="0.0" />

                    <TextView
                        android:id="@+id/accelZ"
                        style="@style/panel_textview"
                        android:text="0.0" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!-- new data layout cell -->

        <LinearLayout style="@style/readout_cell"
            android:layout_weight=".25">

            <TextView
                style="@style/panel_main_label"

                android:text="Gyroscope" />

            <LinearLayout style="@style/panel_values_area">

                <LinearLayout style="@style/prompt_row">

                    <TextView

                        style="@style/panel_textlabel"
                        android:text="GyroX" />

                    <TextView

                        style="@style/panel_textlabel"
                        android:text="GyroY" />

                    <TextView

                        style="@style/panel_textlabel"
                        android:text="GyroZ" />

                </LinearLayout>

                <LinearLayout style="@style/readout_row">

                    <TextView
                        android:id="@+id/gyroX"
                        style="@style/panel_textview"
                        android:text="0.0" />

                    <TextView
                        android:id="@+id/gyroY"
                        style="@style/panel_textview"
                        android:text="0.0" />

                    <TextView
                        android:id="@+id/gyroZ"
                        style="@style/panel_textview"
                        android:text="0.0" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <!-- new data layout cell -->

        <LinearLayout style="@style/readout_cell"
            android:layout_weight=".25">

            <TextView
                style="@style/panel_main_label"
                android:text="Magnetometer" />

            <LinearLayout style="@style/panel_values_area">

                <LinearLayout style="@style/prompt_row">

                    <TextView
                        style="@style/panel_textlabel"
                        android:text="MagnetX" />

                    <TextView
                        style="@style/panel_textlabel"
                        android:text="MagnetY" />

                    <TextView
                        style="@style/panel_textlabel"
                        android:text="MagnetZ" />

                </LinearLayout>

                <LinearLayout style="@style/readout_row">

                    <TextView
                        android:id="@+id/magX"
                        style="@style/panel_textview"
                        android:text="0.0" />

                    <TextView
                        android:id="@+id/magY"
                        style="@style/panel_textview"
                        android:text="0.0" />

                    <TextView
                        android:id="@+id/magZ"
                        style="@style/panel_textview"
                        android:text="0.0" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="126dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_weight=".25"
            android:padding="5dp">

            <TextView
                android:id="@+id/rate_prompt"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sample Rate"
                android:textColor="@color/regular_text" />

            <SeekBar
                android:id="@+id/sample_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/sample_rate_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="200 ms"
                android:textColor="@color/regular_text" />

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/delta_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delta Value"
                android:textColor="@color/regular_text" />

            <SeekBar
                android:id="@+id/delta_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/delta_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 samplings"
                android:textColor="@color/regular_text" />

        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_weight=".35">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:weightSum="1.0">

            <ToggleButton
                android:id="@+id/start"
                style="@style/main_button"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight=".20"
                android:background="@drawable/button_shape_toggle"
                android:textOff="@string/startGathering"
                android:textOn="@string/stopGathering" />


            <ToggleButton
                android:id="@+id/label"
                style="@style/main_button"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight=".20"
                android:background="@drawable/button_shape_toggle"
                android:textOff="@string/labelNeg"
                android:textOn="@string/labelPos" />

            <Button
                android:id="@+id/save"
                style="@style/main_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".20"
                android:background="@drawable/button_shape_normal"
                android:text="Save" />



            <Button
                android:id="@+id/process"
                style="@style/main_button"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight=".20"
                android:background="@drawable/button_shape_normal"
                android:text="Process"
                >
            </Button>

            <ProgressBar

                style="@style/main_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/progressBar"
                android:layout_weight=".20"
                android:visibility="gone"
                />

            <Button
                android:id="@+id/view_results"
                style="@style/main_button"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight=".20"
                android:background="@drawable/button_shape_normal_alt"
                android:visibility="gone"
                android:text="View Results" />
            <Button
                android:id="@+id/cancel"
                style="@style/main_button"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight=".20"
                android:background="@drawable/button_shape_normal_alt"
                android:visibility="gone"
                android:text="Cancel" />

        </LinearLayout>
    </RelativeLayout>


</LinearLayout>