<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/custom_background"
            android:padding="5dp">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="2dp"
                android:background="@color/black"
                android:hint="Name"
                android:inputType="text"
                android:textColor="@color/regular_text"
                android:textColorHint="@color/regular_text"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/name"
                android:background="@color/black"
                android:hint="Category"
                android:inputType="text"
                android:textColor="@color/regular_text"
                android:textColorHint="@color/regular_text"
                android:textSize="30sp" />


            <Button
                android:id="@+id/enter_category"
                style="@style/main_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:background="@drawable/button_shape_normal"
                android:text="@string/enter" />

            <Button
                android:id="@+id/delete_category"
                style="@style/main_button"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@id/enter_category"
                android:background="@drawable/button_shape_normal"
                android:text="Delete" />

            <RadioGroup
                android:id="@+id/method_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/enter_category"
                android:layout_alignStart="@+id/enter_category"
                android:layout_below="@+id/category"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/log_reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/log_reg"
                    android:textColor="@color/regular_text" />

                <RadioButton
                    android:id="@+id/svm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/svm"
                    android:textColor="@color/regular_text" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/cv_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/method_group"
                android:layout_below="@id/method_group"
                android:background="@color/panel_background"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/cv_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="Cross Validation"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/regular_text" />

                <TextView
                    android:id="@+id/c_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select C Values to use"
                    android:textColor="@color/regular_text" />

                <CheckBox
                    android:id="@+id/cp01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="0.01"
                    android:textColor="@color/regular_text" />

                <CheckBox
                    android:id="@+id/cp1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="0.1"
                    android:textColor="@color/regular_text" />

                <CheckBox
                    android:id="@+id/c1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="1"
                    android:textColor="@color/regular_text" />

                <CheckBox
                    android:id="@+id/c10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="10"
                    android:textColor="@color/regular_text" />

                <CheckBox
                    android:id="@+id/c100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="100"
                    android:textColor="@color/regular_text" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="fill_parent"
                android:layout_height="350dp"
                android:layout_below="@id/method_group"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/cv_group"
                android:background="@color/panel_background"
                android:orientation="vertical"
                android:padding="5dp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="Select Sensors"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/regular_text" />


                        <CheckBox
                            android:id="@+id/x_accel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="x accel"
                            android:textColor="@color/regular_text" />

                        <CheckBox
                            android:id="@+id/y_accel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="y accel"
                            android:textColor="@color/regular_text" />

                        <CheckBox
                            android:id="@+id/z_accel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="z accel"
                            android:textColor="@color/regular_text" />

                        <CheckBox
                            android:id="@+id/x_gyro"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="x gyro"
                            android:textColor="@color/regular_text" />

                        <CheckBox
                            android:id="@+id/y_gyro"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="y gyro"
                            android:textColor="@color/regular_text" />

                        <CheckBox
                            android:id="@+id/z_gyro"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="z gyro"
                            android:textColor="@color/regular_text" />

                        <CheckBox
                            android:id="@+id/x_mag"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="x mag"
                            android:textColor="@color/regular_text" />

                        <CheckBox
                            android:id="@+id/y_mag"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="y mag"
                            android:textColor="@color/regular_text" />

                        <CheckBox
                            android:id="@+id/z_mag"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="z mag"
                            android:textColor="@color/regular_text" />

                        <CheckBox
                            android:id="@+id/dx_accel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="dx accel"
                            android:textColor="@color/regular_text" />

                        <CheckBox
                            android:id="@+id/dy_accel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="dy accel"
                            android:textColor="@color/regular_text" />

                        <CheckBox
                            android:id="@+id/dz_accel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="dz accel"
                            android:textColor="@color/regular_text" />

                        <CheckBox
                            android:id="@+id/dx_gyro"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="dx gyro"
                            android:textColor="@color/regular_text" />

                        <CheckBox
                            android:id="@+id/dy_gyro"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="dy gyro"
                            android:textColor="@color/regular_text" />

                        <CheckBox
                            android:id="@+id/dz_gyro"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="dz gyro"
                            android:textColor="@color/regular_text" />

                        <CheckBox
                            android:id="@+id/dx_mag"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="dx mag"
                            android:textColor="@color/regular_text" />

                        <CheckBox
                            android:id="@+id/dy_mag"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="dy mag"
                            android:textColor="@color/regular_text" />

                        <CheckBox
                            android:id="@+id/dz_mag"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="dz mag"
                            android:textColor="@color/regular_text" />

                    </LinearLayout>
                </ScrollView>

            </LinearLayout>

            <CheckBox
                android:id="@+id/pca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/enter_category"
                android:layout_alignStart="@+id/enter_category"
                android:layout_below="@+id/linearLayout"
                android:text="Use PCA to fit"
                android:textColor="@color/regular_text" />

            <EditText
                android:id="@+id/no_pcs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/linearLayout"
                android:layout_alignLeft="@+id/linearLayout"
                android:layout_alignRight="@+id/linearLayout"
                android:layout_alignStart="@+id/linearLayout"
                android:layout_below="@+id/linearLayout"
                android:background="@color/black"
                android:ems="10"
                android:hint="# of PCs to use"
                android:textColorHint="@color/regular_text"
                android:inputType="number"
                android:textColor="@color/regular_text" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
